--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -42,18 +42,20 @@ jobs:
     - name: Checkout
       uses: actions/checkout@main
 
-    - name: 释放磁盘空间
+    - name: Free Disk Space (Ubuntu)
       uses: jlumbroso/free-disk-space@main
       with:
         # this might remove tools that are actually needed,
         # if set to "true" but frees about 6 GB
-        tool-cache: true
+        tool-cache: false
+        
         # all of these default to true, but feel free to set to
         # "false" if necessary for your workflow
         android: true
         dotnet: true
         haskell: true
         large-packages: true
+        docker-images: true
         swap-storage: true
 
     - name: Initialization environment
